link_libraries(jumoku --coverage)
function(do_test name)
	add_executable(test_${name} test_${name}.cc)
	target_compile_options(test_${name} PRIVATE "-g;--coverage")
	add_test(NAME ${name} COMMAND test_${name})
endfunction()
do_test(array)
do_test(array2)
do_test(array_insert)
do_test(array_erase)
do_test(spans)
do_test(spans_insert)
do_test(spans_erase)
do_test(spans_at)
do_test(utf8_insert)
do_test(utf8_erase)
do_test(utf8_at)
